--- a/index.html
+++ b/index.html
@@ -3,10 +3,87 @@
 <head>
     <title>CS 110 Personal Page</title>
     <meta charset="UTF-8">
+    <style>
+        /* Base Styles */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Profile Section */
+        img {
+            display: block;
+            margin: 0 auto 20px;
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        h1, h2 {
+            text-align: center;
+            margin: 10px 0;
+        }
+
+        h1 {
+            font-family: 'Georgia', serif;
+            font-size: 2.2em;
+        }
+
+        h2 {
+            font-weight: normal;
+            font-size: 1.4em;
+            color: #555;
+        }
+
+        /* Sections */
+        h3 {
+            font-family: 'Arial', sans-serif;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 5px;
+            margin-top: 25px;
+            margin-bottom: 15px;
+        }
+
+        /* Social Links */
+        #socials {
+            text-align: center;
+        }
+
+        #socials a {
+            display: inline-block;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+
+        /* Lists */
+        ul {
+            margin-left: 30px;
+            padding-left: 10px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        /* Projects Links */
+        #projects a {
+            text-decoration: none;
+        }
+
+        /* Spacing */
+        p {
+            margin-bottom: 15px;
+        }
+
+    </style>
 </head>
 <body>
     <!-- Profile Picture -->
-    <img src="cat.jpg" alt="Profile picture" width="150">
+    <img src="cat.jpg" alt="Profile picture">
     
     <!-- Name and Subheading -->
     <h1>Jefren Ofiaza</h1>
