--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="project">
-                <img src="images/project2.jpg" alt="ACM Project" class="project-image">
+                <img src="images/project2.png" alt="ACM Project" class="project-image">
                 <div class="project-details">
                     <a href="https://github.com/acm-ucr/h4b-website" target="_blank">ACM Hungry for Biscuits Website</a> - Contributed to development
                 </div>
