--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CS 110 Personal Page</title>
+    <title>Jefren Ofiaza - CS 110 Personal Page</title>
     <meta charset="UTF-8">
+    
+    <!-- Phase 4 -->
+    <meta property="og:title" content="Jefren Ofiaza - CS Student">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <link rel="me" href="https://github.com/jefrenofiaza"> 
+
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
